fix [ISEEC-4516] Issue 17 - UIShell menu items not showing active color (#92)
* fix: make active button same color of top border

* build: 3.1.1-beta.0

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -220,6 +220,10 @@
   &[aria-expanded="true"] {
     background: shell.$bmrg-header-menu-options-accent;
     border: utils.rem(2px) solid shell.$bmrg-header-menu-options-accent;
+
+    svg {
+      fill: shell.$bmrg-header-nav;
+    }
   }
 }
 
