--- a/src/global/themes/_default.scss
+++ b/src/global/themes/_default.scss
@@ -10,7 +10,7 @@ $shell-tokens: (
   bmrg-header-active-background: #4589ff,
   bmrg-header-active-text: #f2f4f8,
   bmrg-header-hover-background: #343a3f,
-  bmrg-header-menu-options-accent: #262626,
+  bmrg-header-menu-options-accent: #4589ff,
   bmrg-header-menu-options-active-background: #262626,
   bmrg-header-menu-options-top-border: #4589ff,
   bmrg-header-notification-default: #9fa5ad,
